--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,9 @@
     "license": "Apache-2.0",
     "require": {
         "php": ">=7.0",
-        "neo-p/annotation": "^0.0.1",
-        "neo-p/di": "^0.0.1"
+        "neo-p/annotation": "^1.0.0",
+        "neo-p/log": "^1.0.0",
+        "neo-p/di": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
